force-app/main/default/objects/Summary_survey__c/Summary_survey__c.object-meta.xml
<CustomObject>
    <label>סקר סיכום</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>סקר סיכום</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summary survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>