force-app/main/default/objects/Summary_survey__c/fields/Overall_satisfaction_with_the_response__c.field-meta.xml
<CustomField>
    <fullName>Overall_satisfaction_with_the_response__c</fullName>
    <description>בסך הכול אני מרוצה מהמענה הטיפולי שקיבלתי במסגרתהקרן לנפגעי טרור של הסוכנות היהודית.</description>
    <inlineHelpText>בסך הכול אני מרוצה מהמענה הטיפולי שקיבלתי במסגרתהקרן לנפגעי טרור של הסוכנות היהודית.</inlineHelpText>
    <label>שביעות רצון כללית מהמענה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>