force-app/main/default/objects/Summary_survey__c/fields/Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Professionalism__c</fullName>
    <description>חשתי שהמענה שקיבלתי ניתן באופן מקצועי, תוך הבנה וידע בתחום הרלוונטי</description>
    <inlineHelpText>חשתי שהמענה שקיבלתי ניתן באופן מקצועי, תוך הבנה וידע בתחום הרלוונטי</inlineHelpText>
    <label>מקצועיות</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>