force-app/main/default/objects/Summary_survey__c/fields/Rights_Access_Empowerment__c.field-meta.xml
<CustomField>
    <fullName>Rights_Access_Empowerment__c</fullName>
    <description>הרגשתי שקיבלתי מידע וכלים שסייעו לי למצות את הזכויות והאפשרויות העומדות לרשותי</description>
    <inlineHelpText>הרגשתי שקיבלתי מידע וכלים שסייעו לי למצות את הזכויות והאפשרויות העומדות לרשותי</inlineHelpText>
    <label>סיוע במיצוי זכויות</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>