force-app/main/default/objects/Summary_survey__c/fields/User_Response_Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>User_Response_Sensitivity__c</fullName>
    <description>רכזת הקשר התייחס/ה אליי ברגישות, כבוד ואנושיות לאורך כל תהליך הטיפול</description>
    <inlineHelpText>רכזת הקשר התייחס/ה אליי ברגישות, כבוד ואנושיות לאורך כל תהליך הטיפול</inlineHelpText>
    <label>רגישות ואנושיות</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>