force-app/main/default/objects/Summary_survey__c/fields/We_would_be_happy_if_you_could_share_a_f__c.field-meta.xml
<CustomField>
    <fullName>We_would_be_happy_if_you_could_share_a_f__c</fullName>
    <label>We would be happy if you could share a f</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>